// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VersionListPageItem renders correctly 1`] = `
<Base
  className="versionListPageItem"
>
  <Base
    backgroundColor="white"
    className="versionListPageItemInner"
  >
    <Link
      as="/v1-1-0/details"
      href="/v1-1-0/details"
    >
      <Link>
        <Flex
          className="topWrapper"
          direction="horizontal"
          padding="x0"
          paddingVertical="x4"
        >
          <Flex
            alignChildrenVertical="middle"
            direction="horizontal"
            grow={true}
            maxWidth="100%"
          >
            <Base
              className="platformIconWrapper"
            >
              <Icon
                color="grape-4"
                name="PlatformsApple"
                size="1.5rem"
              />
            </Base>
            <Flex
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x3"
              grow={true}
              maxWidth="calc(100% - 1.5rem)"
            >
              <Text
                className="title"
                color="grape-4"
                config="5"
                ellipsis={true}
              >
                My app v1.1.0 (28)
              </Text>
            </Flex>
          </Flex>
          <Text
            className="note"
            color="gray-6"
          >
            Updated on January 1, 2008
          </Text>
        </Flex>
      </Link>
    </Link>
    <Base
      Component="button"
      className="descriptionWrapper"
      onClick={[Function]}
      paddingHorizontal="x0"
    >
      <Text
        className="description"
        color="black"
        config="7"
      >
        <Base
          color="black"
        >
          This is a short description about my 1. app. It is a good app. End of description.
        </Base>
      </Text>
      <Base
        className="showMore"
      >
        <Text
          config="8"
        >
          Show more
        </Text>
        <ReactSVG
          afterInjection={[Function]}
          beforeInjection={[Function]}
          className="arrow"
          evalScripts="never"
          fallback={null}
          loading={null}
          renumerateIRIElements={true}
          src="/static/arrow-down.svg"
          wrapper="div"
        />
      </Base>
    </Base>
  </Base>
</Base>
`;

exports[`VersionListPageItem renders correctly for android 1`] = `
<Base
  className="versionListPageItem"
>
  <Base
    backgroundColor="white"
    className="versionListPageItemInner"
  >
    <Link
      as="/v1-1-0/details"
      href="/v1-1-0/details"
    >
      <Link>
        <Flex
          className="topWrapper"
          direction="horizontal"
          padding="x0"
          paddingVertical="x4"
        >
          <Flex
            alignChildrenVertical="middle"
            direction="horizontal"
            grow={true}
            maxWidth="100%"
          >
            <Base
              className="platformIconWrapper"
            >
              <Icon
                color="grape-4"
                name="PlatformsAndroid"
                size="1.5rem"
              />
            </Base>
            <Flex
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x3"
              grow={true}
              maxWidth="calc(100% - 1.5rem)"
            >
              <Text
                className="title"
                color="grape-4"
                config="5"
                ellipsis={true}
              >
                My app v1.1.0 (28)
              </Text>
            </Flex>
          </Flex>
          <Text
            className="note"
            color="gray-6"
          >
            Updated on January 1, 2008
          </Text>
          <Base
            margin="x2"
          >
            <_default
              selected={true}
            >
              banana
            </_default>
          </Base>
        </Flex>
      </Link>
    </Link>
    <Base
      Component="button"
      className="descriptionWrapper"
      onClick={[Function]}
      paddingHorizontal="x0"
    >
      <Text
        className="description"
        color="black"
        config="7"
      >
        <Base
          color="black"
        >
          This is a short description about my 1. app. It is a good app. End of description.
        </Base>
      </Text>
      <Base
        className="showMore"
      >
        <Text
          config="8"
        >
          Show more
        </Text>
        <ReactSVG
          afterInjection={[Function]}
          beforeInjection={[Function]}
          className="arrow"
          evalScripts="never"
          fallback={null}
          loading={null}
          renumerateIRIElements={true}
          src="/static/arrow-down.svg"
          wrapper="div"
        />
      </Base>
    </Base>
  </Base>
</Base>
`;

exports[`VersionListPageItem shows more description 1`] = `
<Base
  className="versionListPageItem"
>
  <Base
    backgroundColor="white"
    className="versionListPageItemInner"
  >
    <Link
      as="/v1-1-0/details"
      href="/v1-1-0/details"
    >
      <Link>
        <Flex
          className="topWrapper"
          direction="horizontal"
          padding="x0"
          paddingVertical="x4"
        >
          <Flex
            alignChildrenVertical="middle"
            direction="horizontal"
            grow={true}
            maxWidth="100%"
          >
            <Base
              className="platformIconWrapper"
            >
              <Icon
                color="grape-4"
                name="PlatformsApple"
                size="1.5rem"
              />
            </Base>
            <Flex
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x3"
              grow={true}
              maxWidth="calc(100% - 1.5rem)"
            >
              <Text
                className="title"
                color="grape-4"
                config="5"
                ellipsis={true}
              >
                My app v1.1.0 (28)
              </Text>
            </Flex>
          </Flex>
          <Text
            className="note"
            color="gray-6"
          >
            Updated on January 1, 2008
          </Text>
        </Flex>
      </Link>
    </Link>
    <Base
      Component="button"
      className="descriptionWrapper isOpen"
      onClick={[Function]}
      paddingHorizontal="x0"
    >
      <Text
        className="description"
        color="black"
        config="7"
      >
        <Base
          color="black"
        >
          This is a short description about my 1. app. It is a good app. End of description.
        </Base>
      </Text>
      <Base
        className="showLess"
      >
        <Text
          config="8"
        >
          Show less
        </Text>
        <ReactSVG
          afterInjection={[Function]}
          beforeInjection={[Function]}
          className="arrow"
          evalScripts="never"
          fallback={null}
          loading={null}
          renumerateIRIElements={true}
          src="/static/arrow-down.svg"
          wrapper="div"
        />
      </Base>
    </Base>
  </Base>
</Base>
`;
